library successfully updated